trunk/Archive2/30/99740ba358372c/output
main.cpp:28:1: error: 'tbb' does not name a type
 tbb::task_scheduler_init init(2);
 ^
main.cpp:31:1: error: expected unqualified-id before 'for'
 for (time t=1; t<=DAYS_OF_SIM; ++t) {
 ^
main.cpp:31:16: error: 't' does not name a type
 for (time t=1; t<=DAYS_OF_SIM; ++t) {
                ^
main.cpp:31:32: error: expected unqualified-id before '++' token
 for (time t=1; t<=DAYS_OF_SIM; ++t) {
                                ^
main.cpp:68:84: error: expected type-specifier before 'KT'
 template <typename graph_t, typename counter_t, typename time=int, class kernelp = KT>
                                                                                    ^
main.cpp:68:84: error: expected '>' before 'KT'
main.cpp:104:9: error: 'uniformReal' does not name a type
         uniformReal  UNI;
         ^
main.cpp: In constructor 'sim1_default<graph_t, counter_t, time, kernelp>::sim1_default(graph_t&, counter_t&, time, int, int)':
main.cpp:74:109: error: class 'sim1_default<graph_t, counter_t, time, kernelp>' does not have any field named 'UNI'
       sim1_default (graph_t& G, counter_t& ct, time t, int a=0, int b=1)    :    m_G(G), CT(ct), m_time(t), UNI(a,b)
                                                                                                             ^
main.cpp: In member function 'void sim1_default<graph_t, counter_t, time, kernelp>::operator()(agent_id) const':
main.cpp:80:19: error: found ':' in nested-name-specifier, expected '::'
         for (edge1: all_edges)  {  
                   ^
main.cpp:80:14: error: 'edge1' has not been declared
         for (edge1: all_edges)  {  
              ^
main.cpp:80:30: error: expected ';' before ')' token
         for (edge1: all_edges)  {  
                              ^
main.cpp:98:7: error: expected primary-expression at end of input
       } //operator
       ^
main.cpp:98:7: error: expected ';' at end of input
main.cpp:98:7: error: expected primary-expression at end of input
main.cpp:98:7: error: expected ')' at end of input
main.cpp:98:7: error: expected statement at end of input
main.cpp:98:7: error: expected '}' at end of input
